# How-to-write-a-C-program-with-Android-Sutdio

./: README.md
PureC/: settings.gradle
PureC/app/: build.gradle
PureC/app/src/main/: AndroidManifest.xml
PureC/app/src/main/assets/: test.info
PureC/app/src/main/cpp/: CMakeLists.txt  native-lib.c
PureC/app/src/main/res/values/: strings.xml
PureC/gradle/wrapper/: gradle-wrapper.properties
